partial jemnpi-base-windows